--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>MTD Globle - Free Online Tools</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0; padding: 0;
+      background: #f2f2f2; color: #333;
+    }
+    header {
+      background-color: #1d3557;
+      color: white;
+      padding: 1em;
+      text-align: center;
+    }
+    .hero {
+      text-align: center;
+      padding: 2em;
+    }
+    .tools {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 1em;
+      padding: 2em;
+    }
+    .tool-card {
+      background: white;
+      padding: 1em;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+    footer {
+      text-align: center;
+      padding: 1em;
+      background: #1d3557;
+      color: white;
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <h1>🌐 MTD Globle</h1>
+  <p>Free Online Tools & Digital Products for Everyone</p>
+</header>
+
+<div class="hero">
+  <h2>Most Used Tools in One Place — All Free!</h2>
+  <p>PDF converters, calculators, file creators, and much more.</p>
+</div>
+
+<section class="tools">
+  <div class="tool-card">🖼️ Image to PDF</div>
+  <div class="tool-card">📄 PDF to Image</div>
+  <div class="tool-card">🧮 Scientific Calculator</div>
+  <div class="tool-card">📦 Create ZIP File</div>
+  <div class="tool-card">📊 GST & EMI Calculator</div>
+  <div class="tool-card">🔐 Password Generator</div>
+  <div class="tool-card">🧾 Text to PDF</div>
+  <div class="tool-card">📷 Image Compressor</div>
+</section>
+
+<footer>
+  <p>&copy; 2025 MTD Globle | Made in India 🇮🇳</p>
+</footer>
+
+</body>
+</html>
 
