--- a/index.html
+++ b/index.html
@@ -16,28 +16,30 @@
       padding: 1em;
       text-align: center;
     }
-    .hero {
-      text-align: center;
-      padding: 2em;
-    }
-    .tools {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 1em;
-      padding: 2em;
-    }
-    .tool-card {
+    section {
       background: white;
-      padding: 1em;
+      padding: 2em;
+      margin: 1em;
       border-radius: 10px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      text-align: center;
+    }
+    h2 {
+      color: #1d3557;
     }
     footer {
       text-align: center;
       padding: 1em;
       background: #1d3557;
       color: white;
+    }
+    button {
+      padding: 10px 20px;
+      margin-top: 10px;
+      background: #1d3557;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
     }
   </style>
 </head>
@@ -48,26 +50,155 @@
   <p>Free Online Tools & Digital Products for Everyone</p>
 </header>
 
-<div class="hero">
-  <h2>Most Used Tools in One Place — All Free!</h2>
-  <p>PDF converters, calculators, file creators, and much more.</p>
-</div>
+<section id="image-to-pdf">
+  <h2>🖼️ Image to PDF Converter</h2>
+  <p>Select images and convert them into a single PDF file.</p>
+  <input type="file" id="imgFiles" multiple accept="image/*" />
+  <br><br>
+  <button onclick="convertImagesToPDF()">Convert to PDF</button>
+</section>
 
-<section class="tools">
-  <div class="tool-card">🖼️ Image to PDF</div>
-  <div class="tool-card">📄 PDF to Image</div>
-  <div class="tool-card">🧮 Scientific Calculator</div>
-  <div class="tool-card">📦 Create ZIP File</div>
-  <div class="tool-card">📊 GST & EMI Calculator</div>
-  <div class="tool-card">🔐 Password Generator</div>
-  <div class="tool-card">🧾 Text to PDF</div>
-  <div class="tool-card">📷 Image Compressor</div>
+<section id="pdf-to-image">
+  <h2>📄 PDF to Image Converter</h2>
+  <p>Select a PDF file to convert its pages into images (PNG).</p>
+  <input type="file" id="pdfFile" accept="application/pdf" />
+  <br><br>
+  <button onclick="convertPDFToImages()">Convert PDF</button>
+  <div id="imageOutput"></div>
+</section>
+
+<section id="calculator">
+  <h2>🧮 Scientific Calculator</h2>
+  <input type="text" id="calc-display" readonly style="width:100%;font-size:1.2em;padding:10px;margin-bottom:10px;"/>
+  <div>
+    <button onclick="addToCalc('7')">7</button>
+    <button onclick="addToCalc('8')">8</button>
+    <button onclick="addToCalc('9')">9</button>
+    <button onclick="addToCalc('/')">/</button><br>
+    <button onclick="addToCalc('4')">4</button>
+    <button onclick="addToCalc('5')">5</button>
+    <button onclick="addToCalc('6')">6</button>
+    <button onclick="addToCalc('*')">*</button><br>
+    <button onclick="addToCalc('1')">1</button>
+    <button onclick="addToCalc('2')">2</button>
+    <button onclick="addToCalc('3')">3</button>
+    <button onclick="addToCalc('-')">-</button><br>
+    <button onclick="addToCalc('0')">0</button>
+    <button onclick="addToCalc('.')">.</button>
+    <button onclick="calculateCalc()">=</button>
+    <button onclick="addToCalc('+')">+</button><br>
+    <button onclick="clearCalc()">C</button>
+  </div>
+</section>
+
+<section id="zip-creator">
+  <h2>📦 Create ZIP File</h2>
+  <p>Select files to compress them into a ZIP file.</p>
+  <input type="file" id="zipFiles" multiple />
+  <br><br>
+  <button onclick="createZipFile()">Create ZIP</button>
 </section>
 
 <footer>
   <p>&copy; 2025 MTD Globle | Made in India 🇮🇳</p>
 </footer>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.13.216/pdf.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+<script>
+  async function convertImagesToPDF() {
+    const { jsPDF } = window.jspdf;
+    const pdf = new jsPDF();
+    const files = document.getElementById("imgFiles").files;
+
+    if (files.length === 0) {
+      alert("Please select at least one image.");
+      return;
+    }
+
+    for (let i = 0; i < files.length; i++) {
+      const file = files[i];
+      const img = new Image();
+      img.src = URL.createObjectURL(file);
+      await new Promise((resolve) => {
+        img.onload = function () {
+          const width = pdf.internal.pageSize.getWidth();
+          const height = (img.height * width) / img.width;
+          if (i > 0) pdf.addPage();
+          pdf.addImage(img, "JPEG", 0, 0, width, height);
+          resolve();
+        };
+      });
+    }
+
+    pdf.save("converted.pdf");
+  }
+
+  async function convertPDFToImages() {
+    const file = document.getElementById("pdfFile").files[0];
+    if (!file) return alert("Please select a PDF file.");
+
+    const pdfData = new Uint8Array(await file.arrayBuffer());
+    const pdf = await pdfjsLib.getDocument({ data: pdfData }).promise;
+
+    const output = document.getElementById("imageOutput");
+    output.innerHTML = "";
+
+    for (let i = 1; i <= pdf.numPages; i++) {
+      const page = await pdf.getPage(i);
+      const scale = 1.5;
+      const viewport = page.getViewport({ scale });
+      const canvas = document.createElement("canvas");
+      const context = canvas.getContext("2d");
+      canvas.height = viewport.height;
+      canvas.width = viewport.width;
+
+      await page.render({ canvasContext: context, viewport }).promise;
+      const img = document.createElement("img");
+      img.src = canvas.toDataURL();
+      img.style.maxWidth = "100%";
+      img.style.margin = "1em 0";
+      output.appendChild(img);
+    }
+  }
+
+  let calcInput = "";
+  function addToCalc(val) {
+    calcInput += val;
+    document.getElementById("calc-display").value = calcInput;
+  }
+  function clearCalc() {
+    calcInput = "";
+    document.getElementById("calc-display").value = "";
+  }
+  function calculateCalc() {
+    try {
+      const result = eval(calcInput);
+      document.getElementById("calc-display").value = result;
+      calcInput = result.toString();
+    } catch {
+      alert("Invalid Expression");
+    }
+  }
+
+  async function createZipFile() {
+    const files = document.getElementById("zipFiles").files;
+    if (files.length === 0) {
+      alert("Please select files to zip.");
+      return;
+    }
+    const zip = new JSZip();
+    for (let file of files) {
+      zip.file(file.name, file);
+    }
+    const content = await zip.generateAsync({ type: "blob" });
+    const a = document.createElement("a");
+    a.href = URL.createObjectURL(content);
+    a.download = "compressed.zip";
+    a.click();
+  }
+</script>
+
 </body>
 </html>
-
